fix adding second endpoint
